--- a/docs/css/reportngClass.css
+++ b/docs/css/reportngClass.css
@@ -294,6 +294,9 @@ a {
      visibility:hidden;
      font-size: 0em;
 }
+td.header:hover  {
+      background-color: #C0C0C0;
+}
  .headerTime {
      visibility:hidden;
      font-size: 0em;
@@ -319,7 +322,7 @@ a {
      width:1em;
 }
  .fixed {
-     background-color: #0000FF;
+     background-color: #c5c5e6;
 }
  .test .fixed {
      background-color: #0066FF;
